--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -80,7 +80,7 @@ background-color:rgb(0, 85, 127);
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>0</number>
          </property>
          <property name="iconSize">
           <size>
@@ -163,13 +163,16 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
+	background-color:#5DADE2;
 }
 QTextEdit{
 border:4px solid rgb(0,0,0);
 border-radius:20px;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
 }
 QRadioButton{
 	font: 14pt &quot;Microsoft Sans Serif&quot;;
@@ -201,7 +204,7 @@ QRadioButton{
 }</string>
                     </property>
                     <property name="text">
-                     <string>Registro de datos basicos del paciente</string>
+                     <string>REGISTRO DE DATOS BASICOS DEL PACIENTE</string>
                     </property>
                    </widget>
                   </item>
@@ -319,6 +322,9 @@ QRadioButton{
                                 <height>40</height>
                                </size>
                               </property>
+                              <property name="maxLength">
+                               <number>10</number>
+                              </property>
                              </widget>
                             </item>
                            </layout>
@@ -429,6 +435,9 @@ QRadioButton{
                                 <height>40</height>
                                </size>
                               </property>
+                              <property name="maxLength">
+                               <number>10</number>
+                              </property>
                              </widget>
                             </item>
                            </layout>
@@ -449,6 +458,9 @@ QRadioButton{
                                 <width>200</width>
                                 <height>40</height>
                                </size>
+                              </property>
+                              <property name="maxLength">
+                               <number>50</number>
                               </property>
                              </widget>
                             </item>
@@ -475,6 +487,9 @@ QRadioButton{
                                 <height>40</height>
                                </size>
                               </property>
+                              <property name="maxLength">
+                               <number>15</number>
+                              </property>
                              </widget>
                             </item>
                            </layout>
@@ -495,6 +510,9 @@ QRadioButton{
                                 <width>200</width>
                                 <height>40</height>
                                </size>
+                              </property>
+                              <property name="maxLength">
+                               <number>12</number>
                               </property>
                              </widget>
                             </item>
@@ -579,6 +597,9 @@ QRadioButton{
                                 <width>200</width>
                                 <height>40</height>
                                </size>
+                              </property>
+                              <property name="maxLength">
+                               <number>60</number>
                               </property>
                              </widget>
                             </item>
@@ -1015,7 +1036,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -1024,8 +1045,8 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-background-color:#D0D3D4;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
@@ -1033,13 +1054,16 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
+	background-color:#5DADE2;
 }
 QTextEdit{
 border:4px solid rgb(0,0,0);
 border-radius:20px;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
 }
 QRadioButton{
 	font: 14pt &quot;Microsoft Sans Serif&quot;;
@@ -1489,7 +1513,7 @@ QRadioButton{
                         <item>
                          <widget class="QLabel" name="lbl_10">
                           <property name="text">
-                           <string>Si el paciente padece alguna otra condicion, indiquela por favor</string>
+                           <string>Por favor, si el paciente posee alguna otra condición medica que posea el paciente.</string>
                           </property>
                          </widget>
                         </item>
@@ -1518,7 +1542,10 @@ QRadioButton{
                           <item>
                            <widget class="QLabel" name="lbl_11">
                             <property name="text">
-                             <string>Alergias y habitos</string>
+                             <string>Alergias y habitos:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignCenter</set>
                             </property>
                            </widget>
                           </item>
@@ -1824,7 +1851,7 @@ border-top:2px solid rgb(0,0,0);
             <normaloff>ELEMENTOS GRAFICOS/dental.png</normaloff>ELEMENTOS GRAFICOS/dental.png</iconset>
           </attribute>
           <attribute name="title">
-           <string>Diagnostico</string>
+           <string>Diagnóstico</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_14">
            <property name="spacing">
@@ -1857,7 +1884,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -1866,8 +1893,8 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-	background-color: rgb(255, 255, 255);
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
@@ -1875,7 +1902,7 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
+	background-color:#5DADE2;
 }
 QTextEdit{
 border:4px solid rgb(0,0,0);
@@ -1883,11 +1910,13 @@ border-radius:20px;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 	background-color: rgb(255, 255, 255);
 }
-QComboBox{
-border:2px solid rgb(0,0,0);
-	font: 12pt &quot;Microsoft Sans Serif&quot;;
-	background-color: rgb(255, 255, 255);
-}</string>
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -1909,7 +1938,7 @@ border:2px solid rgb(0,0,0);
                   <item>
                    <widget class="QLabel" name="lbl_31">
                     <property name="text">
-                     <string>DIAGNOSTICO</string>
+                     <string>DIAGNÓSTICO</string>
                     </property>
                    </widget>
                   </item>
@@ -2018,6 +2047,9 @@ border:2px solid rgb(0,0,0);
                             <height>40</height>
                            </size>
                           </property>
+                          <property name="readOnly">
+                           <bool>true</bool>
+                          </property>
                          </widget>
                         </item>
                        </layout>
@@ -2038,6 +2070,9 @@ border:2px solid rgb(0,0,0);
                             <width>200</width>
                             <height>40</height>
                            </size>
+                          </property>
+                          <property name="readOnly">
+                           <bool>true</bool>
                           </property>
                          </widget>
                         </item>
@@ -2077,7 +2112,7 @@ border:2px solid rgb(0,0,0);
                        </size>
                       </property>
                       <property name="text">
-                       <string>Diagnostico del paciente</string>
+                       <string>Diagnóstico del paciente</string>
                       </property>
                       <property name="alignment">
                        <set>Qt::AlignCenter</set>
@@ -2360,7 +2395,7 @@ border-top:2px solid rgb(0,0,0);
             <normaloff>ELEMENTOS GRAFICOS/reconstruccion.png</normaloff>ELEMENTOS GRAFICOS/reconstruccion.png</iconset>
           </attribute>
           <attribute name="title">
-           <string>tratamiento</string>
+           <string>Tratamiento</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_29">
            <property name="spacing">
@@ -2402,7 +2437,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -2411,8 +2446,8 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-	background-color: rgb(255, 255, 255);
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
@@ -2420,13 +2455,19 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
+	background-color:#5DADE2;
 }
 QTextEdit{
 border:4px solid rgb(0,0,0);
 border-radius:20px;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
 }
 QComboBox{
 border:1px solid rgb(0,0,0);
@@ -2444,7 +2485,7 @@ QDateEdit{
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QVBoxLayout" name="verticalLayout_45">
+             <layout class="QVBoxLayout" name="verticalLayout_11">
               <item>
                <layout class="QVBoxLayout" name="verticalLayout_31">
                 <item>
@@ -2584,6 +2625,11 @@ QDateEdit{
                     <kerning>true</kerning>
                    </font>
                   </property>
+                  <property name="styleSheet">
+                   <string notr="true">QDateEdit{
+border-radius:20px;
+}</string>
+                  </property>
                   <property name="frame">
                    <bool>false</bool>
                   </property>
@@ -2645,6 +2691,19 @@ QDateEdit{
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_24">
                 <item>
+                 <spacer name="horizontalSpacer_10">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
                  <widget class="QFrame" name="frame_5">
                   <property name="minimumSize">
                    <size>
@@ -2661,6 +2720,7 @@ QDateEdit{
                   <property name="styleSheet">
                    <string notr="true">QFrame{
 	background-color: rgb(255, 255, 255);
+border-radius:20px;
 }</string>
                   </property>
                   <property name="frameShape">
@@ -4160,6 +4220,9 @@ QDateEdit{
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
                          </property>
+                         <property name="readOnly">
+                          <bool>true</bool>
+                         </property>
                          <property name="placeholderText">
                           <string>Total en Bs</string>
                          </property>
@@ -4188,6 +4251,9 @@ QDateEdit{
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
+                         </property>
+                         <property name="readOnly">
+                          <bool>true</bool>
                          </property>
                          <property name="placeholderText">
                           <string>Total en $$$</string>
