--- a/interfaces/edicion.ui
+++ b/interfaces/edicion.ui
@@ -34,7 +34,8 @@
      <widget class="QFrame" name="frame">
       <property name="styleSheet">
        <string notr="true">QFrame{
-background-color:gray;
+background-color:rgb(0, 85, 127);
+
 }</string>
       </property>
       <property name="frameShape">
@@ -77,7 +78,7 @@ background-color:gray;
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
-           <string>Edicion de datos del Dentista</string>
+           <string>Edicion de datos del usuario</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <property name="leftMargin">
@@ -107,7 +108,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -116,18 +117,31 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-background-color:#D0D3D4;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
 border:2px solid rgb(0,0,0);
 background-color:white;
-	font: 10pt &quot;Microsoft Sans Serif&quot;;
+	font: 11pt &quot;Microsoft Sans Serif&quot;;
 }
 QPushButton:hover{
-	background-color:#CB4335;
-}</string>
+	background-color:#5DADE2;
+}
+QTextEdit{
+border:4px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -135,10 +149,7 @@ QPushButton:hover{
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QVBoxLayout" name="verticalLayout_22">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_17"/>
-              </item>
+             <layout class="QVBoxLayout" name="verticalLayout_10">
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_14">
                 <item>
@@ -462,9 +473,10 @@ border: 3px solid rgb(0, 0, 0);
                           <property name="font">
                            <font>
                             <family>Microsoft Sans Serif</family>
-                            <pointsize>12</pointsize>
-                            <weight>75</weight>
-                            <bold>true</bold>
+                            <pointsize>14</pointsize>
+                            <weight>50</weight>
+                            <italic>false</italic>
+                            <bold>false</bold>
                            </font>
                           </property>
                           <property name="styleSheet">
@@ -480,9 +492,10 @@ border: 3px solid rgb(0, 0, 0);
                           <property name="font">
                            <font>
                             <family>Microsoft Sans Serif</family>
-                            <pointsize>12</pointsize>
-                            <weight>75</weight>
-                            <bold>true</bold>
+                            <pointsize>14</pointsize>
+                            <weight>50</weight>
+                            <italic>false</italic>
+                            <bold>false</bold>
                            </font>
                           </property>
                           <property name="text">
@@ -707,7 +720,7 @@ border-top:2px solid rgb(0,0,0);
                          <property name="font">
                           <font>
                            <family>Microsoft Sans Serif</family>
-                           <pointsize>10</pointsize>
+                           <pointsize>11</pointsize>
                            <weight>50</weight>
                            <italic>false</italic>
                            <bold>false</bold>
@@ -756,7 +769,7 @@ border-top:2px solid rgb(0,0,0);
                           </size>
                          </property>
                          <property name="text">
-                          <string>Cambiar Contraseña</string>
+                          <string>Cambiar contraseña</string>
                          </property>
                         </widget>
                        </item>
@@ -782,7 +795,7 @@ border-top:2px solid rgb(0,0,0);
                           </size>
                          </property>
                          <property name="text">
-                          <string>Eliminar</string>
+                          <string>Eliminar usuario</string>
                          </property>
                         </widget>
                        </item>
@@ -809,6 +822,16 @@ border-top:2px solid rgb(0,0,0);
                          </property>
                          <property name="text">
                           <string>Añadir usuarios</string>
+                         </property>
+                         <property name="icon">
+                          <iconset>
+                           <normaloff>ELEMENTOS GRAFICOS/agregar-usuario.png</normaloff>ELEMENTOS GRAFICOS/agregar-usuario.png</iconset>
+                         </property>
+                         <property name="iconSize">
+                          <size>
+                           <width>25</width>
+                           <height>25</height>
+                          </size>
                          </property>
                         </widget>
                        </item>
