--- a/interfaces/menu.ui
+++ b/interfaces/menu.ui
@@ -181,12 +181,12 @@ background-color:rgb(145, 200, 228);
              <widget class="QLabel" name="label_10">
               <property name="styleSheet">
                <string notr="true">QLabel{
-	font: 75 26pt &quot;MS Shell Dlg 2&quot;;
+	font: 87 28pt &quot;Segoe UI Black&quot;;
 color:white;
 }</string>
               </property>
               <property name="text">
-               <string>Menu principal</string>
+               <string>Menú principal</string>
               </property>
              </widget>
             </item>
@@ -778,7 +778,7 @@ background-color:rgb(145, 200, 228);
                  </property>
                  <property name="icon">
                   <iconset>
-                   <normaloff>ELEMENTOS GRAFICOS/cash-register.png</normaloff>ELEMENTOS GRAFICOS/cash-register.png</iconset>
+                   <normaloff>ELEMENTOS GRAFICOS/transferencia-de-dinero.png</normaloff>ELEMENTOS GRAFICOS/transferencia-de-dinero.png</iconset>
                  </property>
                  <property name="iconSize">
                   <size>
@@ -868,7 +868,7 @@ border-radius:10px;
                <enum>QTabWidget::North</enum>
               </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <property name="usesScrollButtons">
                <bool>true</bool>
@@ -921,7 +921,7 @@ QFrame{
                   <property name="frameShadow">
                    <enum>QFrame::Raised</enum>
                   </property>
-                  <layout class="QVBoxLayout" name="verticalLayout_12">
+                  <layout class="QVBoxLayout" name="verticalLayout_6">
                    <item>
                     <widget class="Line" name="line_2">
                      <property name="orientation">
@@ -931,18 +931,6 @@ QFrame{
                    </item>
                    <item>
                     <widget class="QLabel" name="label_3">
-                     <property name="minimumSize">
-                      <size>
-                       <width>625</width>
-                       <height>200</height>
-                      </size>
-                     </property>
-                     <property name="maximumSize">
-                      <size>
-                       <width>1000</width>
-                       <height>500</height>
-                      </size>
-                     </property>
                      <property name="styleSheet">
                       <string notr="true">QLabel:hover{
 	border:2px solid rgb(145, 200, 228);
@@ -991,6 +979,7 @@ QFrame{
                      <property name="styleSheet">
                       <string notr="true">QFrame{
 background-color:white;
+border-radius:20px;
 }</string>
                      </property>
                      <property name="frameShape">
@@ -999,68 +988,28 @@ background-color:white;
                      <property name="frameShadow">
                       <enum>QFrame::Raised</enum>
                      </property>
-                     <layout class="QHBoxLayout" name="horizontalLayout_6">
-                      <property name="spacing">
-                       <number>0</number>
-                      </property>
-                      <property name="leftMargin">
-                       <number>0</number>
-                      </property>
-                      <property name="topMargin">
-                       <number>0</number>
-                      </property>
-                      <property name="rightMargin">
-                       <number>0</number>
-                      </property>
-                      <property name="bottomMargin">
-                       <number>0</number>
-                      </property>
+                     <layout class="QVBoxLayout" name="verticalLayout_12">
                       <item>
                        <layout class="QHBoxLayout" name="horizontalLayout_4">
                         <item>
                          <layout class="QVBoxLayout" name="verticalLayout_11">
                           <item>
-                           <widget class="QLabel" name="label_4">
+                           <widget class="QLabel" name="label_11">
                             <property name="text">
-                             <string>Dirección</string>
+                             <string>Dirección del consultorio:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
                             </property>
                            </widget>
                           </item>
                           <item>
-                           <widget class="QLabel" name="label_12">
+                           <widget class="QLabel" name="label_14">
                             <property name="text">
-                             <string>Puerto La Cruz</string>
+                             <string>Edif. Virgen Del Valle Piso 3. Local: 3-2. PTO - Anzoategui</string>
                             </property>
-                           </widget>
-                          </item>
-                         </layout>
-                        </item>
-                        <item>
-                         <spacer name="horizontalSpacer_3">
-                          <property name="orientation">
-                           <enum>Qt::Horizontal</enum>
-                          </property>
-                          <property name="sizeHint" stdset="0">
-                           <size>
-                            <width>40</width>
-                            <height>20</height>
-                           </size>
-                          </property>
-                         </spacer>
-                        </item>
-                        <item>
-                         <layout class="QVBoxLayout" name="verticalLayout_10">
-                          <item>
-                           <widget class="QLabel" name="label_5">
-                            <property name="text">
-                             <string>Numero de contacto</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item>
-                           <widget class="QLabel" name="label_13">
-                            <property name="text">
-                             <string>0000-0000-000</string>
+                            <property name="alignment">
+                             <set>Qt::AlignCenter</set>
                             </property>
                            </widget>
                           </item>
@@ -1080,18 +1029,21 @@ background-color:white;
                          </spacer>
                         </item>
                         <item>
-                         <layout class="QVBoxLayout" name="verticalLayout_6">
+                         <layout class="QVBoxLayout" name="verticalLayout_10">
                           <item>
-                           <widget class="QLabel" name="label_11">
+                           <widget class="QLabel" name="label_5">
                             <property name="text">
-                             <string>X</string>
+                             <string>Numero de contacto:</string>
                             </property>
                            </widget>
                           </item>
                           <item>
-                           <widget class="QLabel" name="label_14">
+                           <widget class="QLabel" name="label_13">
                             <property name="text">
-                             <string>X</string>
+                             <string>0281-9961504</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignCenter</set>
                             </property>
                            </widget>
                           </item>
