--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>988</width>
-    <height>719</height>
+    <height>718</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,8 @@
      <widget class="QFrame" name="frame">
       <property name="styleSheet">
        <string notr="true">QFrame{
-background-color:gray;
+background-color:rgb(0, 85, 127);
+
 }</string>
       </property>
       <property name="frameShape">
@@ -113,7 +114,7 @@ background-color:gray;
              <property name="styleSheet">
               <string notr="true">QFrame{
 background-color:rgb(70, 130, 169);
-	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
 color:rgb(0,0,0);
@@ -123,7 +124,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -141,7 +142,7 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
+	background-color:#5DADE2;
 }
 QTextEdit{
 border:4px solid rgb(0,0,0);
@@ -149,9 +150,11 @@ border-radius:20px;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 	background-color: rgb(255, 255, 255);
 }
-QLabel{
-	
-	font: 12pt &quot;Microsoft Sans Serif&quot;;
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
 }
 </string>
              </property>
@@ -470,7 +473,7 @@ QLabel{
      <x>0</x>
      <y>0</y>
      <width>988</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
