--- a/interfaces/placas.ui
+++ b/interfaces/placas.ui
@@ -71,7 +71,10 @@ background-color:rgb(0, 85, 127);
           </font>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
+         </property>
+         <property name="documentMode">
+          <bool>true</bool>
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
@@ -108,7 +111,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -117,17 +120,30 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-background-color:#D0D3D4;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
 border:2px solid rgb(0,0,0);
 background-color:white;
-font: 13pt &quot;Microsoft Sans Serif&quot;;
 }
 QPushButton:hover{
-	background-color:#CB4335;
-}</string>
+	background-color:#5DADE2;
+}
+QTextEdit{
+border:4px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -235,6 +251,9 @@ QPushButton:hover{
                         <height>40</height>
                        </size>
                       </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
+                      </property>
                      </widget>
                     </item>
                     <item>
@@ -280,6 +299,9 @@ QPushButton:hover{
                         <width>200</width>
                         <height>40</height>
                        </size>
+                      </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
                       </property>
                      </widget>
                     </item>
@@ -370,7 +392,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                         </property>
                         <property name="text">
-                         <string>Placa</string>
+                         <string>Radiografia dental</string>
                         </property>
                         <property name="scaledContents">
                          <bool>true</bool>
@@ -414,7 +436,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                         </property>
                         <property name="text">
-                         <string>Placa</string>
+                         <string>Radiografia dental</string>
                         </property>
                         <property name="scaledContents">
                          <bool>true</bool>
@@ -458,7 +480,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                         </property>
                         <property name="text">
-                         <string>Placa</string>
+                         <string>Radiografia dental</string>
                         </property>
                         <property name="scaledContents">
                          <bool>true</bool>
@@ -532,7 +554,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                         </property>
                         <property name="text">
-                         <string>Placa</string>
+                         <string>Radiografia dental</string>
                         </property>
                         <property name="scaledContents">
                          <bool>true</bool>
@@ -576,7 +598,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                         </property>
                         <property name="text">
-                         <string>Placa</string>
+                         <string>Radiografia dental</string>
                         </property>
                         <property name="scaledContents">
                          <bool>true</bool>
@@ -938,7 +960,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -947,8 +969,8 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-background-color:#D0D3D4;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
@@ -956,8 +978,21 @@ border:2px solid rgb(0,0,0);
 background-color:white;
 }
 QPushButton:hover{
-	background-color:#CB4335;
-}</string>
+	background-color:#5DADE2;
+}
+QTextEdit{
+border:4px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -1072,6 +1107,9 @@ QPushButton:hover{
                         <height>40</height>
                        </size>
                       </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
+                      </property>
                      </widget>
                     </item>
                     <item>
@@ -1117,6 +1155,9 @@ QPushButton:hover{
                         <width>200</width>
                         <height>40</height>
                        </size>
+                      </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
                       </property>
                      </widget>
                     </item>
@@ -1190,7 +1231,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                     </property>
                     <property name="text">
-                     <string>Placa</string>
+                     <string>Radiografia dental</string>
                     </property>
                     <property name="scaledContents">
                      <bool>true</bool>
@@ -1234,7 +1275,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                     </property>
                     <property name="text">
-                     <string>Placa</string>
+                     <string>Radiografia dental</string>
                     </property>
                     <property name="scaledContents">
                      <bool>true</bool>
@@ -1278,7 +1319,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                     </property>
                     <property name="text">
-                     <string>Placa</string>
+                     <string>Radiografia dental</string>
                     </property>
                     <property name="scaledContents">
                      <bool>true</bool>
@@ -1352,7 +1393,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                     </property>
                     <property name="text">
-                     <string>Placa</string>
+                     <string>Radiografia dental</string>
                     </property>
                     <property name="scaledContents">
                      <bool>true</bool>
@@ -1396,7 +1437,7 @@ border: 2px solid  rgb(0,0,0);
 }</string>
                     </property>
                     <property name="text">
-                     <string>Placa</string>
+                     <string>Radiografia dental</string>
                     </property>
                     <property name="scaledContents">
                      <bool>true</bool>
