--- a/interfaces/salida.ui
+++ b/interfaces/salida.ui
@@ -209,7 +209,7 @@ QPushButton:hover{
                      <enum>QFrame::WinPanel</enum>
                     </property>
                     <property name="currentIndex">
-                     <number>1</number>
+                     <number>0</number>
                     </property>
                     <widget class="QWidget" name="page">
                      <property name="styleSheet">
@@ -261,30 +261,105 @@ font: 63 12pt &quot;Yu Gothic UI Semibold&quot;;
                         <property name="frameShadow">
                          <enum>QFrame::Raised</enum>
                         </property>
-                        <layout class="QVBoxLayout" name="verticalLayout_23">
-                         <property name="bottomMargin">
-                          <number>2</number>
-                         </property>
+                        <layout class="QVBoxLayout" name="verticalLayout_24">
                          <item>
                           <layout class="QHBoxLayout" name="horizontalLayout_24">
                            <item>
-                            <widget class="QLabel" name="label_15">
+                            <widget class="QLabel" name="label_20">
                              <property name="minimumSize">
                               <size>
-                               <width>400</width>
-                               <height>0</height>
+                               <width>50</width>
+                               <height>50</height>
                               </size>
                              </property>
                              <property name="maximumSize">
                               <size>
-                               <width>400</width>
-                               <height>16777215</height>
+                               <width>50</width>
+                               <height>50</height>
                               </size>
                              </property>
                              <property name="text">
-                              <string>MEMBRETE</string>
+                              <string/>
+                             </property>
+                             <property name="pixmap">
+                              <pixmap>ELEMENTOS GRAFICOS/odontologia.png</pixmap>
+                             </property>
+                             <property name="scaledContents">
+                              <bool>true</bool>
+                             </property>
+                             <property name="alignment">
+                              <set>Qt::AlignCenter</set>
                              </property>
                             </widget>
+                           </item>
+                           <item>
+                            <layout class="QVBoxLayout" name="verticalLayout_23">
+                             <item>
+                              <widget class="QLabel" name="label_15">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>300</width>
+                                 <height>0</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>300</width>
+                                 <height>16777215</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Yu Gothic UI Semibold</family>
+                                 <pointsize>16</pointsize>
+                                 <weight>7</weight>
+                                 <italic>false</italic>
+                                 <bold>false</bold>
+                                 <underline>true</underline>
+                                </font>
+                               </property>
+                               <property name="styleSheet">
+                                <string notr="true">QLabel{
+font: 63 16pt &quot;Yu Gothic UI Semibold&quot;;
+}</string>
+                               </property>
+                               <property name="text">
+                                <string>Od. José R. Fernandez R </string>
+                               </property>
+                               <property name="alignment">
+                                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                               </property>
+                               <property name="wordWrap">
+                                <bool>true</bool>
+                               </property>
+                              </widget>
+                             </item>
+                             <item>
+                              <widget class="QLabel" name="label_21">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>300</width>
+                                 <height>0</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>300</width>
+                                 <height>16777215</height>
+                                </size>
+                               </property>
+                               <property name="text">
+                                <string>Odontologia General e Infantil</string>
+                               </property>
+                               <property name="alignment">
+                                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                               </property>
+                               <property name="wordWrap">
+                                <bool>true</bool>
+                               </property>
+                              </widget>
+                             </item>
+                            </layout>
                            </item>
                            <item>
                             <layout class="QVBoxLayout" name="verticalLayout_22">
@@ -348,6 +423,19 @@ font: 63 12pt &quot;Yu Gothic UI Semibold&quot;;
                             </layout>
                            </item>
                           </layout>
+                         </item>
+                         <item>
+                          <spacer name="verticalSpacer_11">
+                           <property name="orientation">
+                            <enum>Qt::Vertical</enum>
+                           </property>
+                           <property name="sizeHint" stdset="0">
+                            <size>
+                             <width>20</width>
+                             <height>40</height>
+                            </size>
+                           </property>
+                          </spacer>
                          </item>
                          <item>
                           <layout class="QVBoxLayout" name="verticalLayout_21">
@@ -1008,6 +1096,16 @@ border:2px solid rgb(0,0,0);
                           <layout class="QVBoxLayout" name="verticalLayout_10">
                            <item>
                             <widget class="QLabel" name="label_2">
+                             <property name="font">
+                              <font>
+                               <family>Yu Gothic UI Semibold</family>
+                               <pointsize>12</pointsize>
+                               <weight>7</weight>
+                               <italic>false</italic>
+                               <bold>false</bold>
+                               <underline>true</underline>
+                              </font>
+                             </property>
                              <property name="text">
                               <string>DIAGNOSTICO DEL PACIENTE</string>
                              </property>
@@ -1030,6 +1128,9 @@ border:2px solid rgb(0,0,0);
                                <height>100</height>
                               </size>
                              </property>
+                             <property name="readOnly">
+                              <bool>true</bool>
+                             </property>
                             </widget>
                            </item>
                           </layout>
@@ -1051,6 +1152,16 @@ border:2px solid rgb(0,0,0);
                           <layout class="QVBoxLayout" name="verticalLayout_11">
                            <item>
                             <widget class="QLabel" name="label_6">
+                             <property name="font">
+                              <font>
+                               <family>Yu Gothic UI Semibold</family>
+                               <pointsize>12</pointsize>
+                               <weight>7</weight>
+                               <italic>false</italic>
+                               <bold>false</bold>
+                               <underline>true</underline>
+                              </font>
+                             </property>
                              <property name="text">
                               <string>PLAN DE TRATAMIENTOS Y COSTOS</string>
                              </property>
@@ -1439,6 +1550,16 @@ border:2px solid rgb(0,0,0);
                           <layout class="QVBoxLayout" name="verticalLayout_12">
                            <item>
                             <widget class="QLabel" name="label_7">
+                             <property name="font">
+                              <font>
+                               <family>Yu Gothic UI Semibold</family>
+                               <pointsize>12</pointsize>
+                               <weight>7</weight>
+                               <italic>false</italic>
+                               <bold>false</bold>
+                               <underline>true</underline>
+                              </font>
+                             </property>
                              <property name="text">
                               <string>TRATAMIENTOS REALIZADOS</string>
                              </property>
@@ -1500,6 +1621,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_59">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -1536,6 +1660,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_60">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -1572,6 +1699,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_61">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -1608,6 +1738,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_62">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -1644,6 +1777,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_63">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -1680,6 +1816,9 @@ border:2px solid rgb(0,0,0);
                              </item>
                              <item>
                               <widget class="QLineEdit" name="lineEdit_64">
+                               <property name="readOnly">
+                                <bool>true</bool>
+                               </property>
                                <property name="placeholderText">
                                 <string>Tratamientos realizados</string>
                                </property>
@@ -2177,11 +2316,6 @@ border-top:2px solid rgb(0,0,0);
             </widget>
            </item>
           </layout>
-         </widget>
-         <widget class="QWidget" name="tab">
-          <attribute name="title">
-           <string>Página</string>
-          </attribute>
          </widget>
         </widget>
        </item>
