--- a/interfaces/users.ui
+++ b/interfaces/users.ui
@@ -33,7 +33,7 @@
     <widget class="QFrame" name="frame">
      <property name="styleSheet">
       <string notr="true">QFrame{
-	background-color:#707B7C;
+background-color:rgb(0, 85, 127);
 
 }</string>
      </property>
@@ -77,7 +77,7 @@
         </property>
         <widget class="QWidget" name="tab_3">
          <attribute name="title">
-          <string>Usuario</string>
+          <string>Registro de datos de usuario</string>
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_21">
           <property name="spacing">
@@ -99,7 +99,8 @@
            <widget class="QFrame" name="frame_5">
             <property name="styleSheet">
              <string notr="true">QFrame{
-	background-color:rgb(70, 130, 169);
+background-color:rgb(70, 130, 169);
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
 color:rgb(0,0,0);
@@ -109,7 +110,7 @@ font-size:12pt;
 QHeaderView::section{
 background-color:rgb(0,206,151);
 border:1px solid rgb(0,0,0);
-font-size:12pt;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
@@ -118,17 +119,31 @@ border:1px solid  rgb(0,206,151);
 QLineEdit{
 border:2px solid rgb(0,0,0);
 border-radius:20px;
-background-color:white;
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
 }
 QPushButton{
 border-radius:20px;
 border:2px solid rgb(0,0,0);
 background-color:white;
+	font: 11pt &quot;Microsoft Sans Serif&quot;;
 }
 QPushButton:hover{
-	background-color:#CB4335;
-}</string>
+	background-color:#5DADE2;
+}
+QTextEdit{
+border:4px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
             </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
@@ -141,19 +156,61 @@ QPushButton:hover{
               <widget class="QLabel" name="label">
                <property name="font">
                 <font>
-                 <family>MS Shell Dlg 2</family>
-                 <pointsize>20</pointsize>
-                 <weight>9</weight>
+                 <family>Microsoft Sans Serif</family>
+                 <pointsize>14</pointsize>
+                 <weight>50</weight>
                  <italic>false</italic>
                  <bold>false</bold>
                  <underline>true</underline>
                 </font>
                </property>
                <property name="styleSheet">
-                <string notr="true">QLabel{
-	font: 75 20pt &quot;MS Shell Dlg 2&quot;;
-	text-decoration: underline;
-}</string>
+                <string notr="true">QFrame{
+background-color:rgb(70, 130, 169);
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+QTableWidget{
+color:rgb(0,0,0);
+gridline-color:rgb(0,206,151);
+font-size:12pt;
+}
+QHeaderView::section{
+background-color:rgb(0,206,151);
+border:1px solid rgb(0,0,0);
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+}
+QTbaleWidget QTableCornerButton::section{
+background-color:rgb(0,0,0);
+border:1px solid  rgb(0,206,151);
+}
+QLineEdit{
+border:2px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QPushButton{
+border-radius:20px;
+border:2px solid rgb(0,0,0);
+background-color:white;
+	font: 11pt &quot;Microsoft Sans Serif&quot;;
+}
+QPushButton:hover{
+	background-color:#5DADE2;
+}
+QTextEdit{
+border:4px solid rgb(0,0,0);
+border-radius:20px;
+	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	background-color: rgb(255, 255, 255);
+}
+QLineEdit::hover{
+	background-color:#5DADE2;
+}
+QRadioButton{
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
+}
+</string>
                </property>
                <property name="text">
                 <string>Registro de usuario</string>
@@ -194,10 +251,10 @@ QPushButton:hover{
                      <property name="font">
                       <font>
                        <family>Microsoft Sans Serif</family>
-                       <pointsize>12</pointsize>
-                       <weight>75</weight>
+                       <pointsize>14</pointsize>
+                       <weight>50</weight>
                        <italic>false</italic>
-                       <bold>true</bold>
+                       <bold>false</bold>
                       </font>
                      </property>
                      <property name="text">
@@ -256,10 +313,10 @@ QPushButton:hover{
                      <property name="font">
                       <font>
                        <family>Microsoft Sans Serif</family>
-                       <pointsize>12</pointsize>
-                       <weight>75</weight>
+                       <pointsize>14</pointsize>
+                       <weight>50</weight>
                        <italic>false</italic>
-                       <bold>true</bold>
+                       <bold>false</bold>
                       </font>
                      </property>
                      <property name="text">
@@ -318,10 +375,10 @@ QPushButton:hover{
                      <property name="font">
                       <font>
                        <family>Microsoft Sans Serif</family>
-                       <pointsize>12</pointsize>
-                       <weight>75</weight>
+                       <pointsize>14</pointsize>
+                       <weight>50</weight>
                        <italic>false</italic>
-                       <bold>true</bold>
+                       <bold>false</bold>
                       </font>
                      </property>
                      <property name="text">
@@ -397,7 +454,7 @@ QPushButton:hover{
                      <property name="font">
                       <font>
                        <family>Microsoft Sans Serif</family>
-                       <pointsize>12</pointsize>
+                       <pointsize>14</pointsize>
                        <weight>50</weight>
                        <italic>false</italic>
                        <bold>false</bold>
@@ -420,9 +477,11 @@ QPushButton:hover{
                       <widget class="QRadioButton" name="bt_admin">
                        <property name="font">
                         <font>
-                         <pointsize>12</pointsize>
-                         <weight>75</weight>
-                         <bold>true</bold>
+                         <family>Microsoft Sans Serif</family>
+                         <pointsize>14</pointsize>
+                         <weight>50</weight>
+                         <italic>false</italic>
+                         <bold>false</bold>
                          <underline>true</underline>
                         </font>
                        </property>
@@ -435,9 +494,11 @@ QPushButton:hover{
                       <widget class="QRadioButton" name="bt_doc">
                        <property name="font">
                         <font>
-                         <pointsize>12</pointsize>
-                         <weight>75</weight>
-                         <bold>true</bold>
+                         <family>Microsoft Sans Serif</family>
+                         <pointsize>14</pointsize>
+                         <weight>50</weight>
+                         <italic>false</italic>
+                         <bold>false</bold>
                          <underline>true</underline>
                         </font>
                        </property>
@@ -450,9 +511,11 @@ QPushButton:hover{
                       <widget class="QRadioButton" name="bt_user">
                        <property name="font">
                         <font>
-                         <pointsize>12</pointsize>
-                         <weight>75</weight>
-                         <bold>true</bold>
+                         <family>Microsoft Sans Serif</family>
+                         <pointsize>14</pointsize>
+                         <weight>50</weight>
+                         <italic>false</italic>
+                         <bold>false</bold>
                          <underline>true</underline>
                         </font>
                        </property>
@@ -567,7 +630,11 @@ border-top:2px solid rgb(0,0,0);
                           </property>
                           <property name="font">
                            <font>
-                            <pointsize>10</pointsize>
+                            <family>Microsoft Sans Serif</family>
+                            <pointsize>11</pointsize>
+                            <weight>50</weight>
+                            <italic>false</italic>
+                            <bold>false</bold>
                            </font>
                           </property>
                           <property name="text">
@@ -614,7 +681,11 @@ border-top:2px solid rgb(0,0,0);
                           </property>
                           <property name="font">
                            <font>
-                            <pointsize>10</pointsize>
+                            <family>Microsoft Sans Serif</family>
+                            <pointsize>11</pointsize>
+                            <weight>50</weight>
+                            <italic>false</italic>
+                            <bold>false</bold>
                            </font>
                           </property>
                           <property name="text">
