--- a/interfaces/dogtores.ui
+++ b/interfaces/dogtores.ui
@@ -73,6 +73,9 @@ background-color:rgb(0, 85, 127);
          <property name="currentIndex">
           <number>0</number>
          </property>
+         <property name="documentMode">
+          <bool>true</bool>
+         </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
            <string>Registro de datos basicos de usuario</string>
