Cambioos en el menu principal (ICONO)

--- a/interfaces/menu.ui
+++ b/interfaces/menu.ui
@@ -707,7 +707,7 @@ background-color:rgb(145, 200, 228);
                  </property>
                  <property name="icon">
                   <iconset>
-                   <normaloff>ELEMENTOS GRAFICOS/sharp-update.png</normaloff>ELEMENTOS GRAFICOS/sharp-update.png</iconset>
+                   <normaloff>ELEMENTOS GRAFICOS/historia dental.png</normaloff>ELEMENTOS GRAFICOS/historia dental.png</iconset>
                  </property>
                  <property name="iconSize">
                   <size>
