--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -328,6 +328,53 @@ QRadioButton{
                  </spacer>
                 </item>
                 <item>
+                 <widget class="QPushButton" name="bt_backup">
+                  <property name="minimumSize">
+                   <size>
+                    <width>150</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>150</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <pointsize>9</pointsize>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>Respaldar BDD</string>
+                  </property>
+                  <property name="icon">
+                   <iconset>
+                    <normaloff>ELEMENTOS GRAFICOS/save.png</normaloff>ELEMENTOS GRAFICOS/save.png</iconset>
+                  </property>
+                  <property name="iconSize">
+                   <size>
+                    <width>30</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_3">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
                  <widget class="QPushButton" name="bt_preview">
                   <property name="minimumSize">
                    <size>
@@ -347,7 +394,7 @@ QRadioButton{
                    </font>
                   </property>
                   <property name="text">
-                   <string>Guardar PDF</string>
+                   <string>Guardar como PDF</string>
                   </property>
                   <property name="iconSize">
                    <size>
