inhabilitacion de boton de admin

--- a/interfaces/users.ui
+++ b/interfaces/users.ui
@@ -488,6 +488,9 @@ QRadioButton{
                        <property name="text">
                         <string>Admin</string>
                        </property>
+                       <property name="checkable">
+                        <bool>false</bool>
+                       </property>
                       </widget>
                      </item>
                      <item>
